# superquery

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  compose.yaml  config.yaml  main.py  pyproject.toml  redis.example.conf  requirements.txt  run_test.sh  startup.sh
.github/workflows/: backend.yaml  backend.yml  frontend.yaml  python-ci-cd.yml
config/: config.py
db/: db.py  example.db
docs/infrastructure/: infrastructure.md
docs/miscellaneous/: miscellaneous.md
exports/: dependency_utils.py  exports.py
frontend/: .env.example  Dockerfile  bun.lockb  package.json  tailwind.config.ts  tsconfig.json
frontend/config/: config.ts
frontend/src/app/: StoreProvider.js  apolloProvider.js  appolo-client.js  layout.tsx  not-found.tsx  page.tsx
frontend/src/exports/: exports.ts
frontend/src/services/: ApiService.ts
qdrant_storage/: raft_state.json
src/: main.py
src/ConnectionManager/: ConnectionManager.py
src/config/: config.py
src/constants/databases/: available_databases.py  database_service_mapping.py
src/constants/prompts/: prompts.py
src/exports/: __init__.py  dependency_utils.py  exports.py  index.py
src/helper/: __init__.py  embeddings_assistant.py  handle_answer_types.py  llm_response.py  qdrant_service_assistant.py  regular_expression.py  utils.py
src/infastructure/exceptions/: exceptions.py
src/infastructure/middleware/: logging_middleware.py
src/infastructure/repositories/: auth_repository.py  aws_repo.py  aws_repository.py  database_repo.py  database_repository.py  mongodb_query_repository.py  mysql_query_repository.py  mysql_repo.py  neo4j_query_repository.py  neo4j_repo.py  pinecone_query_repository.py  (+9 more)
src/logger/: logger.py
src/middleware/: logging_middleware.py
src/model/: __init__.py  ai_response.py  database.py  products.py  router_models.py
src/repositories/: __init__.py  auth_repo.py  aws_repo.py  database_repo.py  ddl_repo.py  llm_response.py  mysql_repo.py  neo4j_repo.py  postgres_repo.py  semantic_repo.py  sqlite_repos.py
src/use_cases/: __init__.py  auth_service.py  configurations_service.py  data_service.py  file_service.py  query_service.py
tests/exports/: variables.py
tests/test_auth/: test_auth.py
tests/test_helper/: test_answer_type.py  test_utils.py
tests/test_ping/: test_ping.py
tests/test_repositories/: test_auth_repo.py  test_database_repo.py  test_llm.py
tests/test_use_cases/: test_auth_service.py
tests/test_websocket/: test_data_websocket.py
tests/use_cases/: test_auth_service.py  test_configurations_service.py
web/: Dockerfile  package.json  tailwind.config.ts
(+123 files in other folders)
