[project]
name = "superquery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "boto3>=1.37.7",
    "fastapi-limiter>=0.1.6",
    "fastapi>=0.115.11",
    "langchain-community>=0.3.19",
    "langchain-openai>=0.3.7",
    "langchain>=0.3.20",
    "motor>=3.7.0",
    "neo4j>=5.28.1",
    "ollama>=0.4.7",
    "openai>=1.65.4",
    "pinecone>=6.0.1",
    "python-dotenv>=1.0.1",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.13.3",
    "redis>=5.2.1",
    "schedule>=1.2.2",
    "sqlmodel>=0.0.23",
    "uvicorn[standard]>=0.34.0",
]
